ingress/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jenkins-dashboard
 namespace: default
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: jenkins.aixiangdao.tech
   http:
     paths:
     - backend:
         serviceName: jenkins-ci
         servicePort: 8080
